# ocrus0

./: .gitignore  CMakeLists.txt  README.md  find_bbox.py  ocrus_calc_accuracy.py  ocrus_draw_bbox.py  ocrus_draw_ocr_lines_all.py  ocrus_run_psm_all.py  ocrus_running_time.py  ocrus_show_accuracy.py  ocrus_to_ocr_lines.py  setup.py
config/: sn.conf
cpp/: CMakeLists.txt
cpp/preprocessing/: binarize.h
cpp/preprocessing/binarize/: binarize.cc
cpp/preprocessing/denoise/: denoise_line_point.h  remove_line.cc  remove_line.h
cpp/preprocessing/enhancement/: enhancement.cc  enhancement.h
cpp/preprocessing/shadow/: shadow_remove.cc  shadow_remove.h
cpp/preprocessing/text_detect/: simple_text_detect.cc
cpp/preprocessing/util/: algorithm_util.cc  algorithm_util.h  general.h
cpp/programs/: ocrus_binarize_img.cc  ocrus_preprocesing_img.cc  ocrus_preprocess_img.cc
doc/: ocr_result_format.txt  tesseract_3.04_debug_notes.txt  tesseract_coordinate_system.txt
docs/: architecture_ocrus2016.odt  ocr_result_format.txt
gt_files/2592_1936_ipad/: IMG_0024.JPG_gt.json  IMG_0029.JPG_gt.json  IMG_0034.JPG_gt.json  IMG_0036.JPG_gt.json  IMG_0055.JPG_gt.json  IMG_0058.JPG_gt.json  IMG_0060.JPG_gt.json  IMG_0065.JPG_gt.json  IMG_0067.JPG_gt.json  IMG_0078.JPG_gt.json  IMG_0081.JPG_gt.json  IMG_0089.JPG_gt.json  IMG_0104.JPG_gt.json  IMG_0107.JPG_gt.json  IMG_0109.JPG_gt.json  IMG_0110.JPG_gt.json  IMG_0112.JPG_gt.json  IMG_0122.JPG_gt.json  IMG_0131.JPG_gt.json  IMG_0134.JPG_gt.json  IMG_0135.JPG_gt.json  IMG_0140.JPG_gt.json  IMG_0154.JPG_gt.json  IMG_0156.JPG_gt.json  IMG_0158.JPG_gt.json  IMG_0161.JPG_gt.json  IMG_0168.JPG_gt.json  IMG_0172.JPG_gt.json  IMG_0176.JPG_gt.json  IMG_0185.JPG_gt.json  IMG_0188.JPG_gt.json  IMG_0190.JPG_gt.json  IMG_0194.JPG_gt.json  IMG_0196.JPG_gt.json  ipad_IMG_0028.JPG_gt.json  ipad_IMG_0031.JPG_gt.json  ipad_IMG_0033.JPG_gt.json  ipad_IMG_0035.JPG_gt.json  ipad_IMG_0037.JPG_gt.json  ipad_IMG_0038.JPG_gt.json  (+41 more)
gt_files/2592_1936_ipadmini/: ipadmini_IMG_0040.JPG_gt.json  ipadmini_IMG_0042.JPG_gt.json  ipadmini_IMG_0044.JPG_gt.json  ipadmini_IMG_0046.JPG_gt.json  ipadmini_IMG_0048.JPG_gt.json  ipadmini_IMG_0050.JPG_gt.json  ipadmini_IMG_0052.JPG_gt.json  ipadmini_IMG_0054.JPG_gt.json  ipadmini_IMG_0056.JPG_gt.json  ipadmini_IMG_0058.JPG_gt.json  ipadmini_IMG_0060.JPG_gt.json  ipadmini_IMG_0062.JPG_gt.json  ipadmini_IMG_0064.JPG_gt.json  ipadmini_IMG_0066.JPG_gt.json  ipadmini_IMG_0068.JPG_gt.json  ipadmini_IMG_0070.JPG_gt.json  ipadmini_IMG_0072.JPG_gt.json  ipadmini_IMG_0074.JPG_gt.json  ipadmini_IMG_0076.JPG_gt.json  ipadmini_IMG_0078.JPG_gt.json  ipadmini_IMG_0080.JPG_gt.json  ipadmini_IMG_0082.JPG_gt.json  ipadmini_IMG_0084.JPG_gt.json  ipadmini_IMG_0086.JPG_gt.json  ipadmini_IMG_0088.JPG_gt.json  ipadmini_IMG_0090.JPG_gt.json  ipadmini_IMG_0092.JPG_gt.json  ipadmini_IMG_0094.JPG_gt.json  ipadmini_IMG_0096.JPG_gt.json  ipadmini_IMG_0098.JPG_gt.json  ipadmini_IMG_0102.JPG_gt.json  ipadmini_IMG_0104.JPG_gt.json  ipadmini_IMG_0106.JPG_gt.json  ipadmini_IMG_0108.JPG_gt.json  ipadmini_IMG_0110.JPG_gt.json  ipadmini_IMG_0112.JPG_gt.json  ipadmini_IMG_0114.JPG_gt.json  ipadmini_IMG_0116.JPG_gt.json  ipadmini_IMG_0118.JPG_gt.json  ipadmini_IMG_0120.JPG_gt.json  (+118 more)
gt_files/3264_2448_iphone/: iphone_IMG_0025.JPG_gt.json  iphone_IMG_0026.JPG_gt.json  iphone_IMG_0027.JPG_gt.json  iphone_IMG_0028.JPG_gt.json  iphone_IMG_0029.JPG_gt.json  iphone_IMG_0030.JPG_gt.json  iphone_IMG_0031.JPG_gt.json  iphone_IMG_0032.JPG_gt.json  iphone_IMG_0033.JPG_gt.json  iphone_IMG_0034.JPG_gt.json  iphone_IMG_0035.JPG_gt.json  (+141 more)
ocrus/: ocr_drawing.py  ocr_result.py
python/: CMakeLists.txt  ocrus_calc_accuracy.py  ocrus_cmp_stats.py  ocrus_draw_all.py  ocrus_draw_bbox.py  ocrus_draw_gt_all.py  ocrus_draw_ocr_lines_all.py  ocrus_run_psm_all.py  ocrus_to_gt.py  ocrus_to_json.py  ocrus_to_ocr_lines.py  setup.py
python/ocrus/: ocr_drawing.py  ocr_result.py  stats_analysis.py
python/ocrus/neural_network/: convert_format.py  load_data.py  mnist_format.py  network3.py  network_api.py
scripts/: restore_run_partial.sh  run_all.sh  run_partial.sh  run_partial.sh~
src/: CMakeLists.txt  main.cpp  main2.cpp  ocr_file.cpp  ocrus_bounding_box.cc  ocrus_candidates.cc  ocrus_ocr_draw.cc  tmp_test.cpp  wap_ocr_test.cpp
src/api/: WapOcrApi.cpp  WapOcrApi.h  borderAPI.h  wap_ocr_api.cpp  wap_ocr_api.h
src/binarization/: binarizewolfjolion.cpp  wap_binarize.cc  wap_binarize.h
src/borderPosition/: basicOperations.h  border.h  dataStructures.h  lineEvaluation.h  outputGenerate.h  pickCrossCands.h  quadrangleCorrection.h  quadrangleEvaluation.h  quadrangleScore.h
src/dto/: OcrResultDto.h  ocr_result_dto.cpp  ocr_result_dto.h
src/image_similarity/: Affine.cpp  Bookstein.cpp  Hungarian.cpp  ImageSimilarity.cpp  ImageSimilarity.h  Outlier.cpp  PointMatch.cpp  PointMatch.h  Relax.cpp  ShapeContext.cpp  Tools.cpp  Tools.h
src/include/ocrus/: recognition.h
src/preprocessing/GaussianSPDenoise/: denoise.h
src/preprocessing/binarize/: binarize.h
src/preprocessing/cca/: CCA.h
src/preprocessing/denoise/: denoise_line_point.cpp  denoise_line_point.h
src/preprocessing/enhancement/: enhancement.cpp  enhancement.h
src/preprocessing/noiseLevel/: noiseLevel.h
src/preprocessing/shadow/: ShadowRemove.cpp  ShadowRemove.h  fixshadow.h  shadow_remove.cpp  shadow_remove.h
src/preprocessing/utils/: OCRUtil.h
src/recognition/: recognition.cc  recognition.h  recognition_by_CNN.cpp  recognition_by_CNN.h
src/salientRecognition/pyramid/: pyramid.h
src/salientRecognition/segmentation/: segment-image.h
src/segmentation/: segmentator.cpp  segmentator.h
src/simpleNLP/: ErrorModel.cpp  ErrorModel.h  contact.h  dictionary.cpp  dictionary.h  namecardPost.h  receiptNBC.cpp  receiptNBC.h  receiptPost.cpp  textClassifier.h  viterbi.hpp
src/textDetect/: simple_text_detect.cpp  simple_text_detect.h  textarea.h  textorient.h
src/textExtraction/: main.cpp  textExtraction.h
src/util/: StringUtil.h  algorithm_util.cpp  algorithm_util.h  general.h  string_util.h
src/workflow/: processor.h  workflow.h
(+162 files in other folders)
